Finish adding the form element.

--- a/Amusement Park Pass Generator/Base.lproj/Main.storyboard
+++ b/Amusement Park Pass Generator/Base.lproj/Main.storyboard
@@ -150,18 +150,57 @@
                                             <constraint firstAttribute="bottom" secondItem="Ro8-qj-d5f" secondAttribute="bottom" id="WxX-mw-fkK"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Bk-ow-Zfy" userLabel="Third Form Sub View">
+                                        <rect key="frame" x="0.0" y="265" width="768" height="132.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qRQ-P6-qzp" userLabel="Birth SSN Project Stack View">
+                                                <rect key="frame" x="0.0" y="0.0" width="768" height="132.5"/>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="qRQ-P6-qzp" firstAttribute="top" secondItem="3Bk-ow-Zfy" secondAttribute="top" id="GNK-qR-KtJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="qRQ-P6-qzp" secondAttribute="trailing" id="ONd-7q-QOA"/>
+                                            <constraint firstAttribute="bottom" secondItem="qRQ-P6-qzp" secondAttribute="bottom" id="OlO-6V-RkL"/>
+                                            <constraint firstItem="qRQ-P6-qzp" firstAttribute="leading" secondItem="3Bk-ow-Zfy" secondAttribute="leading" id="ymE-ME-Pew"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sUF-eJ-cmH" userLabel="Fourth Form Sub View">
+                                        <rect key="frame" x="0.0" y="397.5" width="768" height="265.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RsB-I0-YtA" userLabel="Birth SSN Project Stack View">
+                                                <rect key="frame" x="0.0" y="0.0" width="768" height="265.5"/>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="RsB-I0-YtA" firstAttribute="top" secondItem="sUF-eJ-cmH" secondAttribute="top" id="6Xc-6A-RIz"/>
+                                            <constraint firstAttribute="bottom" secondItem="RsB-I0-YtA" secondAttribute="bottom" id="M0m-YG-AWk"/>
+                                            <constraint firstAttribute="trailing" secondItem="RsB-I0-YtA" secondAttribute="trailing" id="OEb-yo-avt"/>
+                                            <constraint firstItem="RsB-I0-YtA" firstAttribute="leading" secondItem="sUF-eJ-cmH" secondAttribute="leading" id="dIX-mp-Eca"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.92941176470588238" green="0.93725490196078431" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="30e-i2-oyp"/>
                                     <constraint firstItem="5HE-ii-ROK" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="3re-9T-0tm"/>
                                     <constraint firstItem="5HE-ii-ROK" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.16" id="6Ed-Fd-zCX"/>
+                                    <constraint firstItem="3Bk-ow-Zfy" firstAttribute="top" secondItem="5HE-ii-ROK" secondAttribute="bottom" id="8SM-Gg-t2E"/>
+                                    <constraint firstItem="sUF-eJ-cmH" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.32" id="B92-Gn-FR9"/>
+                                    <constraint firstItem="sUF-eJ-cmH" firstAttribute="top" secondItem="3Bk-ow-Zfy" secondAttribute="bottom" id="GJn-3m-TET"/>
+                                    <constraint firstItem="sUF-eJ-cmH" firstAttribute="width" secondItem="tiZ-wa-ocu" secondAttribute="width" id="ODG-zN-9fQ"/>
+                                    <constraint firstItem="3Bk-ow-Zfy" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="OWv-1Y-ss7"/>
+                                    <constraint firstAttribute="trailing" secondItem="3Bk-ow-Zfy" secondAttribute="trailing" id="Rcg-Gy-3eH"/>
+                                    <constraint firstAttribute="trailing" secondItem="sUF-eJ-cmH" secondAttribute="trailing" id="ZzB-4v-VHk"/>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="top" secondItem="tiZ-wa-ocu" secondAttribute="top" id="btM-M6-wfF"/>
                                     <constraint firstItem="5HE-ii-ROK" firstAttribute="top" secondItem="2vd-Gx-UT4" secondAttribute="bottom" id="cRH-4m-kPr"/>
+                                    <constraint firstItem="3Bk-ow-Zfy" firstAttribute="width" secondItem="tiZ-wa-ocu" secondAttribute="width" id="eTJ-JA-dZI"/>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.16" id="kqQ-YT-3Ye"/>
                                     <constraint firstAttribute="trailing" secondItem="5HE-ii-ROK" secondAttribute="trailing" id="nWT-yo-fHK"/>
                                     <constraint firstAttribute="trailing" secondItem="2vd-Gx-UT4" secondAttribute="trailing" id="tIk-YM-wti"/>
                                     <constraint firstItem="5HE-ii-ROK" firstAttribute="width" secondItem="tiZ-wa-ocu" secondAttribute="width" id="vxn-7P-G0z"/>
+                                    <constraint firstItem="sUF-eJ-cmH" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="yrm-nT-Bb6"/>
+                                    <constraint firstItem="3Bk-ow-Zfy" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.16" id="zYF-O9-lwU"/>
                                 </constraints>
                             </view>
                         </subviews>
