All subview are in place.

--- a/Amusement Park Pass Generator/Base.lproj/Main.storyboard
+++ b/Amusement Park Pass Generator/Base.lproj/Main.storyboard
@@ -166,10 +166,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sUF-eJ-cmH" userLabel="Fourth Form Sub View">
-                                        <rect key="frame" x="0.0" y="397.5" width="768" height="265.5"/>
+                                        <rect key="frame" x="0.0" y="397.5" width="768" height="266"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RsB-I0-YtA" userLabel="Birth SSN Project Stack View">
-                                                <rect key="frame" x="0.0" y="0.0" width="768" height="265.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="768" height="266"/>
                                             </stackView>
                                         </subviews>
                                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -180,17 +180,25 @@
                                             <constraint firstItem="RsB-I0-YtA" firstAttribute="leading" secondItem="sUF-eJ-cmH" secondAttribute="leading" id="dIX-mp-Eca"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5cz-Gu-FUn" userLabel="Fifth Form Sub View">
+                                        <rect key="frame" x="0.0" y="663.5" width="768" height="166"/>
+                                        <color key="backgroundColor" red="0.95294117649999999" green="0.59607843140000005" blue="0.17254901959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="30e-i2-oyp"/>
                                     <constraint firstItem="5HE-ii-ROK" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="3re-9T-0tm"/>
                                     <constraint firstItem="5HE-ii-ROK" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.16" id="6Ed-Fd-zCX"/>
+                                    <constraint firstAttribute="trailing" secondItem="5cz-Gu-FUn" secondAttribute="trailing" id="7Qk-Lh-myO"/>
                                     <constraint firstItem="3Bk-ow-Zfy" firstAttribute="top" secondItem="5HE-ii-ROK" secondAttribute="bottom" id="8SM-Gg-t2E"/>
                                     <constraint firstItem="sUF-eJ-cmH" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.32" id="B92-Gn-FR9"/>
+                                    <constraint firstItem="5cz-Gu-FUn" firstAttribute="top" secondItem="sUF-eJ-cmH" secondAttribute="bottom" id="Ct5-vw-zNn"/>
                                     <constraint firstItem="sUF-eJ-cmH" firstAttribute="top" secondItem="3Bk-ow-Zfy" secondAttribute="bottom" id="GJn-3m-TET"/>
                                     <constraint firstItem="sUF-eJ-cmH" firstAttribute="width" secondItem="tiZ-wa-ocu" secondAttribute="width" id="ODG-zN-9fQ"/>
                                     <constraint firstItem="3Bk-ow-Zfy" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="OWv-1Y-ss7"/>
+                                    <constraint firstAttribute="bottom" secondItem="5cz-Gu-FUn" secondAttribute="bottom" id="PiA-hy-C6P"/>
                                     <constraint firstAttribute="trailing" secondItem="3Bk-ow-Zfy" secondAttribute="trailing" id="Rcg-Gy-3eH"/>
+                                    <constraint firstItem="5cz-Gu-FUn" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="Yay-vc-neU"/>
                                     <constraint firstAttribute="trailing" secondItem="sUF-eJ-cmH" secondAttribute="trailing" id="ZzB-4v-VHk"/>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="top" secondItem="tiZ-wa-ocu" secondAttribute="top" id="btM-M6-wfF"/>
                                     <constraint firstItem="5HE-ii-ROK" firstAttribute="top" secondItem="2vd-Gx-UT4" secondAttribute="bottom" id="cRH-4m-kPr"/>
